--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.0",
+    "nodemon": "^2.0.19",
     "uuid": "^8.3.2"
   }
 }
